test/functions/bradc/paramThis/funParamThis.good
funParamThis.chpl:9: error: unresolved call 'int(64).foo("hi")'
funParamThis.chpl:1: note: candidates are: param int.foo()
funParamThis.chpl:5: note:                 int.foo()
